Implement data annotations.
Data annotations enable easy future updates, variable deprecations, type
inference when rendering, and addresses many of the missing features in
argument_spec. Standardized variable usage now that data annotations are
implemented. These variable names are shortened and allow easy filtering for
future changes for both configuration and service changes.  This is a one time
BREAKING change requiring updates to variables.

Breaking:
* postgres_service_* -> postgres_srv_*
* postgres_core_* -> postgres_cfg_*
* postgres_* -> postgres_srv_*

Added:
* Data annotations added for all user-accessible variables. Applies
  contextual information to variables enabling easier processing,
  validation, and removing many duplicate variables, at the cost of a
  larger run-time memory footprint.
* postgres_srv_user_data_manage_enable - Enables manipulating data/media files
  with postgres_srv_user, instead of 'root'; which should address
  remote mounted filesystems for containers and squashed NFS mounts.
* Validate step - confirms modified services are running.
* Test postgres_srv_user_data_manage_enable.

Changed:
* PostgresQL service validation simplified and implemented in validation step.
* *.j2 - Renders file according to data annotations, automatically ordering by
  section.
* Moved directory modification from prep -> config step.
* Removed internal duplicate calculated variables in favor of data
  annotations with raw, parsed, role values.
* Molecule verification tests no longer needs to assert service is
  running as that is now done in the validation step.
* Enable test_diff by default.

Removed:
* extensions - no longer needed as role only supports a specific version for
  release. Consumers of the role should branch the old version, or update.

--- a/templates/environment.j2
+++ b/templates/environment.j2
@@ -5,6 +5,6 @@
 # I. e. you need to enclose any value which does not only consist of letters,
 # numbers, and '-', '_', '.' in single quotes. Shell commands are not
 # evaluated.
-{% for key, value in postgres_environment_config.items() %}
+{% for key, value in _postgres_cfg_environment.raw.items() %}
 {{ key }}='{{ value}}'
 {% endfor %}
