--- a/templates/start.conf.j2
+++ b/templates/start.conf.j2
@@ -5,4 +5,4 @@
 # See pg_createcluster(1) for details. When running from systemd,
 # invoke 'systemctl daemon-reload' after editing this file.
 
-{{ _postgres_start_config }}
+{{ _postgres_srv_startup.raw }}
