Enforce non-overlapping include_dirs.
Added:
* Assertion check to enforce non-overlapping include_dirs; which may lead to a
  hard to diagnose error 'syntax error in file' when files are correctly
  formatted. Included directories may NOT be included twice.

Changed:
* Updated data annotations to v2 (no user visible changes).
* Enforce deprecated variable checks.
* no_log remove until data tagging is available in ansible.

--- a/templates/pg_hba.conf.j2
+++ b/templates/pg_hba.conf.j2
@@ -15,7 +15,7 @@ Reference:
 {%       endfor %}
 {%     endif %}
 {%   elif section.value.key == 'hba' %}
-{%     for auth in section.value.parsed %}
+{%     for auth in section.value.data %}
 {%       if auth.comment | length > 0 %}
 # {{ auth.comment }}
 {%       endif %}
