Migrate to data annotations V3.
Data annotations V3 are V2 annotations implemented with a filter. No data
structure changes.

Changed:
* Annotations updated and reduced ~1000 lines.

--- a/templates/postgres.j2
+++ b/templates/postgres.j2
@@ -1,2 +1,2 @@
 export PGDATA={{ _postgres_cfg_data_directory.raw }}
-export PATH=$PATH:{{ _postgres_cfg_data_directory.role_bin }}
+export PATH=$PATH:{{ _postgres_cfg_data_directory._bin }}
